Remove Z-Index bug

--- a/wp-content/themes/hucon/style.ext8a54.css
+++ b/wp-content/themes/hucon/style.ext8a54.css
@@ -544,7 +544,6 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
-  z-index: 10;
 }
 
 @media (min-width: 576px) {
